--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -20,6 +20,19 @@
             "text-3": "Мы верим, что успех достигается благодаря командной работе и открытому общению. Тесно сотрудничая с нашими клиентами и партнерами, мы создаем решения, которые приносят взаимный рост и успех.",
             "text-4": "Мы постоянно ищем более умные и креативные способы решения задач. Применяя новые технологии и идеи, мы помогаем нашим клиентам оставаться впереди в быстро меняющемся мире бизнеса."
         },
+        "whyUs": {
+            "mainTitle": "Почему мы?",
+            "title1": "Опытная команда",
+            "title2": "Выгодная стоимость",
+            "title3": "Многоязычная поддержка",
+            "title4": "Комплексные решения",
+            "title5": "Надёжность и прозрачность",
+            "text1": "Опытная команда – наши специалисты имеют многолетний опыт в сфере международной бизнес-поддержки.",
+            "text2": "Выгодная стоимость – услуги из Узбекистана отличаются высоким качеством по конкурентной цене.",
+            "text3": "Многоязычная поддержка – команда свободно общается на английском, русском и узбекском языках.",
+            "text4": "Комплексные решения – все бизнес-услуги в одном месте: колл-центр, бухгалтерия, маркетинг и юридическая поддержка.",
+            "text5": "Надёжность и прозрачность – мы обеспечиваем стабильную коммуникацию и понятную отчётность на каждом этапе."
+        },
         "callToAction": {
             "title": "Мы здесь, чтобы сделать ваш сайт потрясающим.",
             "btn": "Свяжитесь с нами"
@@ -32,5 +45,143 @@
         "services": "Услуги",
         "cases": "Кейсы",
         "contacts": "Контакты"
+    },
+    "about": {
+        "title": "Наша миссия",
+        "text": "Мы помогаем компаниям по всему миру развивать свой бизнес, предоставляя надёжную и комплексную поддержку. Наша миссия — объединять людей, культуры и возможности через профессионализм, инновации и доверие.",
+        "teamTitle": "Наша команда",
+        "teamText": "Молодые, амбициозные и преданные делу специалисты, которые делают невозможное возможным.",
+        "experienceTitle": "Наш опыт",
+        "experienceText": "Мы сотрудничаем с десятками компаний по всему миру, имея богатый опыт в сферах BPO, маркетинга, бухгалтерского учёта, юридического сопровождения и международных коммуникаций. От стартапов до корпораций — мы обеспечиваем результат, которому доверяют."
+    },
+    "services": {
+        "title": "Наши услуги",
+        "subtitle": "Мы помогаем компаниям развиваться как на международном, так и на локальном уровне — предлагая решения, сочетающие профессионализм, инновации и эффективность.",
+        "internationalTitle": "🌍 Международная бизнес-поддержка",
+        "uzbekTitle": "Бизнес-поддержка в Узбекистане",
+
+        "international": {
+            "1": {
+                "title": "Операции колл-центра",
+                "text": "Профессиональная многоязычная поддержка, обеспечивающая эффективную коммуникацию с клиентами по всему миру."
+            },
+            "2": {
+                "title": "Операторские услуги",
+                "text": "Опытные специалисты, обеспечивающие бесперебойную работу ваших бизнес-процессов."
+            },
+            "3": {
+                "title": "Маркетинговые решения",
+                "text": "Комплексные стратегии продвижения, направленные на укрепление вашего бренда на глобальном рынке."
+            },
+            "4": {
+                "title": "Бухгалтерские услуги",
+                "text": "Прозрачный и точный учёт, который помогает принимать взвешенные финансовые решения."
+            },
+            "5": {
+                "title": "Дизайн-услуги",
+                "text": "Креативный и функциональный дизайн, отражающий ценности и миссию вашей компании."
+            },
+            "6": {
+                "title": "Бэк-офис решения",
+                "text": "Полный спектр административной поддержки — просто, эффективно и надёжно."
+            }
+        },
+
+        "uzbek": {
+            "1": {
+                "title": "Регистрация компаний",
+                "text": "Мы сопровождаем вас на каждом этапе открытия бизнеса в Узбекистане — от документов до начала работы."
+            },
+            "2": {
+                "title": "Бухгалтерия и налоги",
+                "text": "Соответствие требованиям, точность и оптимизация — полное ведение финансовых процессов компании."
+            },
+            "3": {
+                "title": "Юридические услуги",
+                "text": "Профессиональная юридическая поддержка, гарантирующая законность и стабильность вашей деятельности."
+            },
+            "4": {
+                "title": "Консалтинг по льготам и преимуществам",
+                "text": "Помогаем получить резидентство IT Park, налоговые льготы и другие местные преимущества."
+            },
+            "5": {
+                "title": "Организация мероприятий",
+                "text": "Организация корпоративных и деловых событий — от конференций до официальных приёмов."
+            },
+            "6": {
+                "title": "Гостевой и сервисный менеджмент",
+                "text": "Профессиональный приём и сопровождение ваших партнёров и гостей в Узбекистане."
+            }
+        }
+    },
+    "cases": {
+        "title": "Кейсы и отзывы клиентов",
+        "subtitle": "Узнайте, как наши клиенты добились успеха с нашей помощью — реальные истории, измеримые результаты и искренние отзывы.",
+
+        "list": [{
+                "title": "Выход на европейский рынок",
+                "text": "Мы помогли логистической компании открыть колл-центр в Восточной Европе, что увеличило удержание клиентов на 40%.",
+                "client": "TransGlobal Logistics",
+                "quote": "«Потрясающая коммуникация и профессионализм. Без их поддержки мы бы не выросли так быстро!»"
+            },
+            {
+                "title": "Резидентство IT Park для стартапа",
+                "text": "Юридическое и бухгалтерское сопровождение позволило местному стартапу получить статус резидента IT Park и сократить налоги на 25%.",
+                "client": "NextGen Solutions",
+                "quote": "«Всё прошло гладко — документы, отчётность, даже общение с госорганами!»"
+            },
+            {
+                "title": "Запуск бизнеса в Узбекистане",
+                "text": "Мы помогли компании из ОАЭ зарегистрировать бизнес и начать работу в Ташкенте менее чем за 2 месяца.",
+                "client": "AlMira Trading",
+                "quote": "«Процесс был невероятно лёгким и прозрачным. Очень рекомендуем!»"
+            }
+        ]
+    },
+    "contacts": {
+        "title": "Контакты",
+        "subtitle": "Свяжитесь с нами по вопросам консалтинга, партнёрства или поддержки. Обычно отвечаем в течение одного рабочего дня.",
+        "office": "Головной офис",
+        "address": {
+            "line1": "Ташкент, Университетский бульвар, 15",
+            "line2": "Бизнес-центр, 3-й этаж",
+            "mapQuery": "Ташкент Университетский бульвар 15"
+        },
+        "phonesTitle": "Телефоны",
+        "phones": {
+            "main": {
+                "view": "+998 (90) 123-45-67",
+                "raw": "+998901234567"
+            },
+            "support": {
+                "view": "+998 (71) 200-00-00",
+                "raw": "+998712000000"
+            }
+        },
+        "email": "hello@yourdomain.uz",
+        "hoursTitle": "Режим работы",
+        "hours": "Пн–Пт: 09:00–18:00 (UTC+5)",
+        "form": {
+            "name": "Ваше имя",
+            "namePh": "Иван Иванов",
+            "email": "Email",
+            "emailPh": "you@example.com",
+            "phone": "Телефон (необязательно)",
+            "phonePh": "+998 90 123 45 67",
+            "message": "Сообщение",
+            "messagePh": "Кратко опишите ваш запрос…",
+            "agree": "Я соглашаюсь на обработку персональных данных",
+            "send": "Отправить сообщение",
+            "sending": "Отправка",
+            "success": "Спасибо! Ваше сообщение отправлено.",
+            "error": "Что-то пошло не так. Попробуйте ещё раз."
+        },
+        "errors": {
+            "name": "Пожалуйста, укажите имя",
+            "email": "Введите корректный email",
+            "message": "Напишите минимум 10 символов",
+            "agree": "Необходимо согласие с условиями"
+        }
     }
+
 }
