--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -49,8 +49,6 @@
     "about": {
         "title": "Наша миссия",
         "text": "Мы помогаем компаниям по всему миру развивать свой бизнес, предоставляя надёжную и комплексную поддержку. Наша миссия — объединять людей, культуры и возможности через профессионализм, инновации и доверие.",
-        "teamTitle": "Наша команда",
-        "teamText": "Молодые, амбициозные и преданные делу специалисты, которые делают невозможное возможным.",
         "experienceTitle": "Наш опыт",
         "experienceText": "Мы сотрудничаем с десятками компаний по всему миру, имея богатый опыт в сферах BPO, маркетинга, бухгалтерского учёта, юридического сопровождения и международных коммуникаций. От стартапов до корпораций — мы обеспечиваем результат, которому доверяют."
     },
@@ -150,8 +148,8 @@
         "phonesTitle": "Телефоны",
         "phones": {
             "main": {
-                "view": "+998 (90) 123-45-67",
-                "raw": "+998901234567"
+                "view": "+998 (87) 459-10-10",
+                "raw": "+998(87) 459 10 10"
             },
             "support": {
                 "view": "+998 (71) 200-00-00",
